--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "dependencies": {
         "montage": "~0.15.0",
-        "digit": "~0.5.0"
+        "digit": "~0.5.0”,
+	"mjs-volume" : "git://github.com/fabrobinet/mjs-volume.git"
     },
     "devDependencies": {
         "montage-testing": "~0.4.0"
