--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "3d-demo",
     "version": "0.1.0",
     "dependencies": {
-        "montage": "~0.15.0",
+        "montage": "~0.14.0",
         "digit": "~0.5.0",
-        "mjs-volume" : "git://github.com/fabrobinet/mjs-volume.git"
-        },
+        "mjs-volume": "git+https://github.com/fabrobinet/mjs-volume.git"
+    },
     "devDependencies": {
         "montage-testing": "~0.4.0"
     },
@@ -13,5 +13,7 @@
         "run-tests.html",
         "test"
     ],
-    "bundle": [ "ui/main.reel" ]
+    "bundle": [
+        "ui/main.reel"
+    ]
 }
