--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.1.0",
     "dependencies": {
         "montage": "~0.14.0",
-        "digit": "~0.5.0",
-        "mjs-volume": "git+https://github.com/fabrobinet/mjs-volume.git"
+        "digit": "~0.5.0"
     },
     "devDependencies": {
         "montage-testing": "~0.4.0"
